# complete-confusion

./: .buildinfo  .gitignore  README.md  api.html  build_docs.sh  copy_notebook_outputs.sh  example_reports.html  examples.html  examples_interactive.html  genindex.html  index.html  installation.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: api.doctree  example_reports.doctree  examples.doctree  examples_interactive.doctree  index.doctree  installation.doctree  notebooks.doctree  quickstart.doctree
.doctrees/notebooks/: demo_binary.doctree  demo_cifar10.doctree  demo_minimal.doctree  demo_multiclass.doctree  index.doctree
.github/workflows/: build.yml  docs.yml
_modules/: index.html
_modules/complete_confusion/: evaluate.html
_sources/: example_reports.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  notebooks.rst.txt
_sources/notebooks/: demo_minimal.ipynb.txt  index.rst.txt
complete_confusion/: __init__.py  evaluate.py
complete_confusion/resources/: complete-confusion.html  complete-confusion.js
docs/: Makefile
docs/source/: api.rst  conf.py  examples.rst  examples_interactive.rst  index.rst  notebooks.rst  quickstart.rst
docs/source/notebooks/: index.rst  (+6 more)
notebooks/: demo_binary.html  demo_cifar10.html  demo_minimal.html  demo_multiclass.html  index.html
notebooks/binary_output/: complete-confusion-data.js  complete-confusion.html
notebooks/cifar10_performance/: ._complete-confusion.html  complete-confusion-data.js
scripts/: README.md  download_assets.sh  upload_assets.sh
tests/: performance_metrics_test_data.py  test_evaluate.py
vega-prototype/: data.js  data_cifar10.js  test-vega2.html  train_classifier.ipynb  vega-spec.js
(+5 files in other folders)
