[tool.poetry]
name = "complete-confusion"
version = "0.1.0"
description = "Performance evaluation and visualization with one function call"
authors = ["Peter Kok <p.kok@esciencecenter.nl>", "Christiaan Meijer <c.meijer@esciencecenter.nl>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/complete-confusion/complete-confusion"
homepage = "https://github.com/complete-confusion/complete-confusion"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
plotly = "^5.24.1"
scikit-learn = "^1.6.1"
chardet = "^5.2.0"
pytest = "^8.4.1"
pandas = "^2.3.0"
krippendorff = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
