[tool.poetry]
name = "complete-confusion"
version = "0.1.0"
description = "Performance evaluation and visualization with one function call"
authors = ["Peter Kok <p.kok@esciencecenter.nl>", "Christiaan Meijer <c.meijer@esciencecenter.nl>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/complete-confusion/complete-confusion"
homepage = "https://github.com/complete-confusion/complete-confusion"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
plotly = "^5.24.1"
scikit-learn = "^1.6.1"
chardet = "^5.2.0"
pytest = "^8.4.1"
pandas = "^2.3.0"
krippendorff = "^0.8.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
ipykernel = "^6.29.0"
sphinx-autodoc-typehints = "^1.25.0"
myst-parser = "^2.0.0"
myst-nb = "^1.3.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
